# agent_apps

./: .gitignore  README.md  env.example  main.py  pyproject.toml
api/: __init__.py
api/routes/: __init__.py  services.py
api/routes/apps/: __init__.py  document_compliance.py
api/routes/common/: __init__.py  mineru.py  storage.py
config/: config.toml
db/mysql/: __init__.py
db/mysql/connection/: __init__.py  base.py  factory.py  mysql_manager.py  sqlite_manager.py
db/mysql/models/: __init__.py  base_model.py
db/mysql/models/apps/: __init__.py  document_inspection.py
db/mysql/models/common/: __init__.py  file_storage.py
db/mysql/repositories/: __init__.py
db/mysql/repositories/apps/: __init__.py  document_inspection_repository.py
db/mysql/repositories/common/: __init__.py  file_storage_repository.py
db/redis/: __init__.py  keys.py  namespace.py
db/redis/connection/: __init__.py  base.py  cluster_manager.py  factory.py  standalone_manager.py
docs/: deepresearch设计文档.md
src/agents/command_agent/: agent.py  prompts.py
src/agents/critic_agent/: agent.py  prompts.py
src/agents/document_compliance/: __init__.py  prompts.py
src/agents/research_agent/: __init__.py  agent.py  prompts.py
src/agents/write_agent/: agent.py  prompts.py
src/services/apps/document_inspection/: __init__.py  extractor.py  (+4 more)
src/services/mineru/: __init__.py  client.py  schemas.py  service.py
src/services/storage/: __init__.py  constants.py  file_manager.py  schemas.py  service.py
src/utils/: __init__.py  config_manager.py  env_manager.py
test/mineru/: __init__.py
