[project]
name = "agent-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.3.5",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "loguru>=0.7.3",
    "pymupdf>=1.26.7",
    "pymysql>=1.1.2",
    "redis[hiredis]>=7.1.0",
    "sqlalchemy>=2.0.45",
    "tavily-python>=0.7.17",
    "toml>=0.10.2",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
